# distributed-algorithms

./: .gitignore  Cargo.toml  contest.json  flake.nix  grid.json
src/: location.rs  main.rs  node.rs  nodegrid.rs  tests.rs
src/node/: centralized.rs  connection.rs
src/nodegrid/: algorithm_traits.rs  algorithms.rs  snapshots.rs
src/nodegrid/algorithms/: elections.rs  snapshots.rs
