[package]
name = "distributed-algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
rand = "0.9.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
unicode-segmentation = "1.12.0"
